# ollama_models_info_fetcher

./: Cargo.toml  README.md  out.txt
examples/: example1.rs  example2.rs  example3.rs  example4.rs
src/: errors.rs  lib.rs
src/model_config/: category.rs  mod.rs  models.rs  varient.rs
src/utils/: category.rs  fetching.rs  mod.rs  readme.rs  summary.rs  varient.rs
tests/: unittest.rs
