[package]
name = "ollama_models_info_fetcher"
version = "0.1.1"
edition = "2021"
authors = ["Allawiii <alighraibeh87@gmail.com>"]
license = "MIT"
description = "ollama models information fetcher."
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
once_cell = "1.20.3"
htmd = "0.1.6"
regex = "1.11.1"
